# ChangeLog for dev-tex/latex-unicode
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/latex-unicode/ChangeLog,v 1.8 2004/08/18 14:35:43 usata Exp $

  18 Aug 2004; Mamoru KOMACHI <usata@gentoo.org>
  latex-unicode-20040307.ebuild:
  Do not build cjk files if USE="-cjk". Thanks to Georgi Georgiev
  <chutz@gg3.net>. See bug #56809.

  06 May 2004; Ciaran McCreesh <ciaranm@gentoo.org>
  latex-unicode-20040307.ebuild:
  Added ~sparc, #50251

  17 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> latex-unicode-20030605.ebuild:
  Mark stable on amd64.

  14 Apr 2004; David Holm <dholm@gentoo.org> latex-unicode-20040307.ebuild:
  Added to ~ppc.

*latex-unicode-20040307 (14 Apr 2004)

  14 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> latex-unicode-20040307.ebuild:
  Version bumped.

*latex-unicode-20030605 (05 Jan 2004)

  28 Feb 2004; Mamoru KOMACHI <usata@gentoo.org>
  latex-unicode-20030605.ebuild:
  Added cjk IUSE flag to make cjk-latex optional. Thanks to Nguyen Thai
  Ngoc Duy <pclouds@vnlinux.org> for reporting the bug #43159

  05 Jan 2004; Mamoru KOMACHI <usata@gentoo.org>
  latex-unicode-20030605.ebuild:
  Initial import. Closing bug #17282
