@@ -1,6 +1,8 @@
 MD5 cf7620cff23f61fdfd8f81088ab65919 ChangeLog 1219
+MD5 646c92b54140253ceb1a12f8a9d7014c latex-unicode-20041017.ebuild 1484
 MD5 a43370bbb57cb967dbffe1a084475550 metadata.xml 181
 MD5 646c92b54140253ceb1a12f8a9d7014c latex-unicode-20040307.ebuild 1484
 MD5 ebb84301159d80faf1833c08fbdfe57a latex-unicode-20030605.ebuild 1184
 MD5 ee773e58992bb7ec580593e339d568cc files/digest-latex-unicode-20030605 75
 MD5 aae1bb411ff5864dfeb2a27c6fe77400 files/digest-latex-unicode-20040307 135
+MD5 2ac41b92ccce38450eb50ec24d35b7ec files/digest-latex-unicode-20041017 135
