@@ -1,0 +1,2 @@
+MD5 1b85878cbe79f672d73da6de6e3d7d00 latex-unicode-20041017.tar.gz 1068123
+MD5 5973d22eb803ca9987c483a28f78e6be UnicodeData.txt 897402
