@@ -1,6 +1,12 @@
 # ChangeLog for dev-tex/latex-unicode
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/latex-unicode/ChangeLog,v 1.8 2004/08/18 14:35:43 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/latex-unicode/ChangeLog,v 1.9 2004/11/17 14:37:02 usata Exp $
+
+*latex-unicode-20041017 (17 Nov 2004)
+
+  17 Nov 2004; Mamoru KOMACHI <usata@gentoo.org>
+  +latex-unicode-20041017.ebuild:
+  Version bumped.
 
   18 Aug 2004; Mamoru KOMACHI <usata@gentoo.org>
   latex-unicode-20040307.ebuild:
